<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/menu_search"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_reports"
        android:icon="@android:drawable/ic_menu_report_image"
        android:title="@string/menu_reports"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_calculator"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/menu_calculator"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_reminders"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/menu_reminders"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/menu_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/menu_about"
        app:showAsAction="never" />
</menu>
