<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            style="@style/HeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language" />

        <RadioGroup
            android:id="@+id/lang_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/lang_ar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arabic" />

            <RadioButton
                android:id="@+id/lang_en"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english" />
        </RadioGroup>

        <Button
            android:id="@+id/change_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/change_pin" />

        <Button
            android:id="@+id/backup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/backup" />

        <Button
            android:id="@+id/restore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/restore" />

        <Button
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/about" />
    </LinearLayout>
</ScrollView>
